test/test_suite/errors/missing_bang.c3

fault Bob { FOO }

fn int! test()
{
	return Bob.FOO; // #error: You need to add a trailing
}